k8s/ai/comfyui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui
  namespace: ai
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: "comfyui.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: comfyui-service
                port:
                  number: 8188
  tls:
    - hosts:
        - comfyui.enricoruggieri.com
      secretName: comfyui-cert-tls
